[project]
name = "browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "python-dotenv[cli]>=1.2.2",
    "uvicorn>=0.45.0",
    "websockets>=16.0",
]

[tool.poetry.requires-plugins]
poethepoet = ">=0.41.0"

[dependency-groups]
dev = [
    "poethepoet>=0.41.0",
]

[tool.poe.tasks.dev]
cmd = "dotenv -f .env run python -m src.main"

[tool.poe.tasks.start]
cmd = "uv run python -m src.main"
